# sample-python-lambda

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
artifacts/: README.md
localstack_tmp/: README.md
src/sample_python_lambda/: handler.py
src/sample_python_lambda/apmlogging/: __init__.py
tests/: test_sample_python_lambda.py
tools/: localdeploy.py  packer.py  utils.py
