[tool.poetry]
name = "sample-python-lambda"
version = "0.1.0"
description = ""
authors = ["Adam Jasinski <adam.jasinski@checkout.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-json-logger = "^2.0.2"
boto3 = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pack = 'tools.packer:pack_lambda'
localdeploy = 'tools.localdeploy:deploy_to_localstack'